Update the data path

--- a/LLM/LLM.ipynb
+++ b/LLM/LLM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "5475b0b9-0ced-4a2c-9e23-7d09e2f7af18",
    "metadata": {},
    "outputs": [],
@@ -61,10 +61,12 @@
       "Based on the customer's interest, which item would you recommend? Respond in the format:\n",
       "\n",
       "Recommendation: [B1 or B2]\n",
+      "Reason: [your explanation]\n",
       "\n",
       "\n",
       "=== LLM Recommendation ===\n",
-      "Recommendation: B1\n"
+      "Recommendation: B1\n",
+      "Reason: Based on the customer's browsing history showing interest in noise-cancelling wireless headphones with long battery life, this indicates they value premium audio equipment for personal listening. While the bookshelf speakers could also deliver high quality sound, headphones would be a better fit as a solo listening device that doesn't require additional equipment. The over-ear studio headphones would align best with their demonstrated preferences for high performance, wireless audio gear optimized for individual use.\n"
      ]
     }
    ],
@@ -123,6 +125,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "accea836-707e-43a8-892b-fa8935d8371a",
+   "metadata": {},
+   "source": [
+    "Note that this is an example of making inference and perform evaluation on 100 samples. The actual inference and evaluation are performed using batch inference in Amazon Bedrock to submit a batch of requests at once."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "19258be3-ae76-4592-86f9-78bfdc06f60c",
@@ -140,8 +150,8 @@
     "# Loading data\n",
     "print('Loading data..', flush=True)\n",
     "s3 = boto3.client('s3')\n",
-    "bucket = 'search-page-template-datasets-devo'\n",
-    "s3_key = 'playground/liangsiq/LLM/LLM_input_data/Digital_Music_dataset.pkl'\n",
+    "bucket = 'your-s3-bucket'\n",
+    "s3_key = 'LLM_input_data/Digital_Music_dataset.pkl'\n",
     "buffer = io.BytesIO()\n",
     "\n",
     "# Download the pickle file into memory\n",
